[package]
name = "hyperid"
version = "1.1.2-alpha.0"
description = "Superfast id generator"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
repository = "https://github.com/allevo/hyperid-rs"
edition = "2018"

license = "MIT"
keywords = ["generator", "id", "unique"]
categories = ["algorithms", "data-structures"]

[dependencies]
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "compare_with_uuid"
harness = false

[[bench]]
name = "add"
harness = false
