[package]
name = "hyperid"
version = "2.0.1-alpha.1"
description = "Superfast id generator"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
repository = "https://github.com/allevo/hyperid-rs"
edition = "2018"

license = "MIT"
keywords = ["generator", "id", "unique"]
categories = ["algorithms", "data-structures"]

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
base64 = { version = "0", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "compare_with_uuid"
harness = false

[[bench]]
name = "add"
harness = false

[[bench]]
name = "url_safe"
harness = false
required-features = ["url_safe"]

[features]
url_safe = ["base64"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
