[package]
name = "hyperid"
version = "2.0.2-alpha.0"
description = "Superfast id generator"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
repository = "https://github.com/allevo/hyperid-rs"
edition = "2018"

license = "MIT"
keywords = ["generator", "id", "unique"]
categories = ["algorithms", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
base64 = { version = "0", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "uuid"
harness = false

[[bench]]
name = "compare_with_uuid"
harness = false

[[bench]]
name = "add"
harness = false

[[bench]]
name = "url_safe"
harness = false
required-features = ["url_safe"]

[features]
url_safe = ["base64"]
